--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,57 @@
+curl (7.26.0-1maemo1+0cssu2) unstable; urgency=high
+
+  * Fix buffer overflow when negotiating SMTP DIGEST-MD5 authentication
+    as per CVE-2013-0249 (Closes: #700002)
+    http://curl.haxx.se/docs/adv_20130206.html
+  * Fix cookie domain tailmatch as per CVE-2013-1944
+    http://curl.haxx.se/docs/adv_20130412.html (Closes: #705274)
+  * Fix URL decode buffer boundary flaw as per CVE-2013-2174
+    http://curl.haxx.se/docs/adv_20130622.html
+  * Add 09_reset-timecond.patch (Closes: #705783, #719300)
+  * Fix OpenSSL checking of a certificate CN or SAN name field when the
+    digital signature verification is turned off as per CVE-2013-4545
+    http://curl.haxx.se/docs/adv_20131115.html
+  * Disable host verification too when using the --insecure option
+    (Closes: #729965)
+  * Fix GnuTLS checking of a certificate CN or SAN name field when the digital
+    signature verification is turned off as per CVE-2013-6422
+    http://curl.haxx.se/docs/adv_20131217.html
+  * Fix re-use of wrong HTTP NTLM connection as per CVE-2014-0015
+    http://curl.haxx.se/docs/adv_20140129.html
+  * Fix multiple security issues (Closes: #742728):
+    - Fix connection re-use when using different log-in credentials
+      as per CVE-2014-0138
+      http://curl.haxx.se/docs/adv_20140326A.html
+    - Reject IP address wildcard matches as per CVE-2014-0139
+      http://curl.haxx.se/docs/adv_20140326B.html
+  * Fix multiple security issues:
+    - Only use full host matches for hosts used as IP address
+      as per CVE-2014-3613
+    - Reject incoming cookies set for TLDs as per CVE-2014-3620
+  * Fix duphandle read out of bounds as per CVE-2014-3707
+    http://curl.haxx.se/docs/adv_20141105.html
+  * Fix URL request injection vulnerability as per CVE-2014-8150
+    http://curl.haxx.se/docs/adv_20150108B.html
+  * Fix re-using authenticated connection when unauthenticated
+    as per CVE-2015-3143
+    http://curl.haxx.se/docs/adv_20150422A.html
+  * Fix Negotiate not treated as connection-oriented as per CVE-2015-3148
+    http://curl.haxx.se/docs/adv_20150422B.html
+
+ -- Ludek Finstrle <luf@seznam.cz>  Sun,  7 Feb 2016 21:57:49 +0100
+
 curl (7.26.0-1maemo1+0cssu1) unstable; urgency=high
 
   * Fix CSSU version info
   * Fix debian/rules for debhelper 5 (merlin1991)
 
- -- Ludek Finstrle <luf@pzkagis.cz>  Wed,  1 Aug 2012 10:06:24 +0200
+ -- Ludek Finstrle <luf@seznam.cz>  Wed,  1 Aug 2012 10:06:24 +0200
 
 curl (7.26.0-1maemo1+cssu1) unstable; urgency=high
 
   * Adopt 7.26.0 for Maemo CSSU
 
- -- Ludek Finstrle <luf@pzkagis.cz>  Sun, 10 Jun 2012 12:38:54 +0200
+ -- Ludek Finstrle <luf@seznam.cz>  Sun, 10 Jun 2012 12:38:54 +0200
 
 curl (7.26.0-1) unstable; urgency=low
 
